Increase size of login and register sections to prevent overflow of content onto the footer

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -445,7 +445,7 @@ body, .raleway{
     margin: auto;
     position:relative;
     top: 50%;
-    transform: translateY(-30%);
+    transform: translateY(-50%);
     z-index:1;
     box-shadow: -8px 10px 10px 0px #00000045;
   }
@@ -508,7 +508,7 @@ body, .raleway{
   #login{
     display: flex;
     height: 80vh;
-    min-height: 450px;
+    min-height: 490px;
     align-items: center;
     text-align: center;
   }
@@ -842,7 +842,7 @@ body, .raleway{
     }
 
     #registration{
-      min-height: 420px;
+      min-height: 440px;
     }
     
     /* envelope */
